Bug 1379925 - Part 2: Revise method |updateWith| based on spec change. r=baku

MozReview-Commit-ID: FpTGFlMvl0S